# cpp2023

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/codes/: assignop.cpp  assignop.h  newe.cpp  newe.h  newptr.cpp  newptr.h  strcov.cpp  strcov.h  strview.cpp  strview.h
src/codes2/: SwapAssignCls.cpp  SwapAssignCls.h  returnref.h
src/codes3/: const_template.h  method_template.h  type_traits.h
