SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED True)
SET(CODES_LIST "codes/strcov.cpp" "codes/strcov.h" "codes/strview.h" "codes/strview.cpp")
SET(CODES_LIST2 "codes/newe.h" "codes/newe.cpp" "codes/newptr.h" "codes/newptr.cpp" "codes/assignop.h" "codes/assignop.cpp")
SET(CODES2_LIST "codes2/SwapAssignCls.h" "codes2/SwapAssignCls.cpp" "codes2/returnref.h")
ADD_EXECUTABLE(main main.cpp ${CODES_LIST} ${CODES_LIST2} ${CODES2_LIST})